package org.example.thread_simple;

public class Main {

    public static void main(String[] args) {
        ThreadSimple threadSimple = new ThreadSimple();
        threadSimple.start ();
    }
}
